add: addition lines of java properties files.

--- a/elwikijsp.root/bundles/org.elwiki.main/src/templates/default_es.properties
+++ b/elwikijsp.root/bundles/org.elwiki.main/src/templates/default_es.properties
@@ -534,6 +534,20 @@ upload.info=Para poder subir un nuevo adjunto a esta p\u00E1gina, usa el siguien
 upload.submit=Subir
 upload.done=Si has terminado de subir archivos es probable que quieras volver a {0}
 
+# ScopeContent.jsp
+scope.cmd=Scope:
+scope.cmd.title=Seleccione los temas que desea ver
+scope.save.submit=Establecer Scope
+scope.cancel.submit=Cancelar
+scope.show.topics=Temas mostrados
+scope.btn.all=Todos los temas
+scope.btn.selected=Temas seleccionados
+scope.label.selection=Temas seleccionados
+scope.btn.new=Nuevo...
+scope.btn.edit=Editar...
+scope.btn.remove=Eliminar
+scope.selection.ok=Seleccionar temas
+scope.selection.cancel=Cancelar
 
 # ViewTemplate.jsp
 # 0 : Application Name
