--- a/elwikijsp.root/bundles/org.elwiki.main/src/templates/default_fi.properties
+++ b/elwikijsp.root/bundles/org.elwiki.main/src/templates/default_fi.properties
@@ -521,6 +521,20 @@ upload.info=Lisätäksesi uuden liitteen tälle sivulle, valitse tiedosto ja paina 
 upload.submit=Liitä
 upload.done=Jos olet liittänyt tarpeeksi tiedostoja, saatat haluta palata yläsivulle {0}
 
+# ScopeContent.jsp
+scope.cmd=Scope:
+scope.cmd.title=Valitse näyttöaiheet
+scope.save.submit=Aseta laajuus
+scope.cancel.submit=Peruuta
+scope.show.topics=Näytetyt aiheet
+scope.btn.all=Kaikki aiheet
+scope.btn.selected=Valitut aiheet
+scope.label.selection=Valitut aiheet
+scope.btn.new=Uusi...
+scope.btn.edit=Muokata...
+scope.btn.remove=Poista
+scope.selection.ok=Valitse aiheita
+scope.selection.cancel=Peruuta
 
 # ViewTemplate.jsp
 # 0 : Application Name
