--- a/elwikijsp.root/bundles/org.elwiki.main/src/templates/default_pt_BR.properties
+++ b/elwikijsp.root/bundles/org.elwiki.main/src/templates/default_pt_BR.properties
@@ -448,6 +448,21 @@ prefs.cookie.info=Essa wiki automaticamente relembra dos seus cookies, \
 notification.createUserProfile.accept.subject=Bem-vindo ao {0}\!
 notification.createUserProfile.accept.content=Parabéns\! Seu novo perfil em {0} foi criado. Seguem os detalhes\: \n\nLogin:\: {1} \nNome \: {2} \nE-Mail:    \: {3} \n\nSe você esquecer sua senha você pode resetá-la em {4}.
 
+# ScopeContent.jsp
+scope.cmd=Scope:
+scope.cmd.title=Select display topics
+scope.save.submit=Set Scope
+scope.cancel.submit=Cancel
+scope.show.topics=Displayed topics
+scope.btn.all=All topics
+scope.btn.selected=Selected topics
+scope.label.selection=Selected topics
+scope.btn.new=New...
+scope.btn.edit=Edit...
+scope.btn.remove=Remove
+scope.selection.ok=Select topics
+scope.selection.cancel=Cancel
+
 # ------------------------------------------------------------------------
 # There are a lot of keys still missing here, please add your translations below.
 # You can find them in the file default.properties or at
