--- a/elwikijsp.root/bundles/org.elwiki.main/src/templates/default_ru.properties
+++ b/elwikijsp.root/bundles/org.elwiki.main/src/templates/default_ru.properties
@@ -520,6 +520,21 @@ upload.info=\u0414\u043b\u044f \u0437\u0430\u0433\u0440\u0443\u0437\u043a\u0438 
 upload.submit=\u0417\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044c
 upload.done=\u0415\u0441\u043b\u0438 \u0432\u044b \u0437\u0430\u043a\u043e\u043d\u0447\u0438\u043b\u0438 \u0437\u0430\u0433\u0440\u0443\u0437\u043a\u0443, \u043c\u043e\u0436\u0435\u0442\u0435 \u0432\u0435\u0440\u043d\u0443\u0442\u0441\u044f \u043a {0}
 
+# ScopeContent.jsp
+scope.cmd=Scope:
+scope.cmd.title=\u0412\u044B\u0431\u043E\u0440 \u043E\u0442\u043E\u0431\u0440\u0430\u0436\u0430\u0435\u043C\u044B\u0445 \u0442\u0435\u043C
+scope.save.submit=\u0417\u0430\u0434\u0430\u0442\u044C Scope
+scope.cancel.submit=\u041E\u0442\u043C\u0435\u043D\u0438\u0442\u044C
+scope.show.topics=\u041E\u0442\u043E\u0431\u0440\u0430\u0436\u0430\u0435\u043C\u044B\u0435 \u0442\u0435\u043C\u044B
+scope.btn.all=\u0412\u0441\u0435 \u0442\u0435\u043C\u044B
+scope.btn.selected=\u0412\u044B\u0431\u0440\u0430\u043D\u043D\u044B\u0435 \u0442\u0435\u043C\u044B
+scope.label.selection=\u0412\u044B\u0431\u0440\u0430\u043D\u043D\u044B\u0435 \u0442\u0435\u043C\u044B
+scope.btn.new=\u0421\u043E\u0437\u0434\u0430\u0442\u044C...
+scope.btn.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C...
+scope.btn.remove=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
+scope.selection.ok=\u0412\u044B\u0431\u0435\u0440\u0430\u0442\u044C \u0442\u0435\u043C\u044B
+scope.selection.cancel=\u041E\u0442\u043C\u0435\u043D\u0438\u0442\u044C
+
 # ViewTemplate.jsp
 # 0 : Application Name
 # 1 : Page name
