--- a/elwikijsp.root/bundles/org.elwiki.resources/templates/default_fr.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/templates/default_fr.properties
@@ -580,6 +580,20 @@ upload.info=Pour t\u00E9l\u00E9charger un nouvel attachement \u00E0 cette page, 
 upload.submit=T\u00E9l\u00E9charger
 upload.done=Si vous avez fini de t\u00E9l\u00E9charger, peut-\u00EAtre voulez-vous revenir vers {0}
 
+# ScopeContent.jsp
+scope.cmd=Portée:
+scope.cmd.title=Sélectionner les sujets d'affichage
+scope.save.submit=Définir la portée
+scope.cancel.submit=Abandonner
+scope.show.topics=Sujets affichés
+scope.btn.all=Tous les sujets
+scope.btn.selected=Sujets sélectionnés
+scope.label.selection=Sujets sélectionnés
+scope.btn.new=Nouveau...
+scope.btn.edit=Éditer...
+scope.btn.remove=Retirer
+scope.selection.ok=Sélectionnez des sujets
+scope.selection.cancel=Abandonner
 
 # ViewTemplate.jsp
 # 0 : Application Name
