--- a/elwikijsp.root/bundles/org.elwiki.resources/templates/default_it.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/templates/default_it.properties
@@ -537,6 +537,20 @@ upload.info=Per caricare un nuovo allegato, usa \
 upload.submit=Carica
 upload.done=Se hai completato il caricamento, puoi tornare a {0}
 
+# ScopeContent.jsp
+scope.cmd=Scopo:
+scope.cmd.title=Seleziona gli argomenti di visualizzazione
+scope.save.submit=Imposta ambito
+scope.cancel.submit=Annulla
+scope.show.topics=Argomenti visualizzati
+scope.btn.all=Tutti gli argomenti
+scope.btn.selected=Argomenti selezionati
+scope.label.selection=Argomenti selezionati
+scope.btn.new=Nuovo...
+scope.btn.edit=Modificare...
+scope.btn.remove=Rimuovere
+scope.selection.ok=Seleziona gli argomenti
+scope.selection.cancel=Annulla
 
 # ViewTemplate.jsp
 # 0 : Application Name
