--- a/elwikijsp.root/bundles/org.elwiki.resources/templates/default_nl.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/templates/default_nl.properties
@@ -571,6 +571,20 @@ upload.info=Om nieuwe bijlagen te kunnen toevoegen aan deze pagina, \
 upload.submit=Bijlage op de server plaatsen
 upload.done=Klaar?  Ga terug naar {0}
 
+# ScopeContent.jsp
+scope.cmd=Scope:
+scope.cmd.title=Selecteer weergaveonderwerpen
+scope.save.submit=Instellen Scope
+scope.cancel.submit=Annuleer
+scope.show.topics=Weergegeven onderwerpen
+scope.btn.all=Alle onderwerpen
+scope.btn.selected=Geselecteerde onderwerpen
+scope.label.selection=Geselecteerde onderwerpen
+scope.btn.new=Nieuw...
+scope.btn.edit=Bewerken...
+scope.btn.remove=Verwijderen
+scope.selection.ok=Selecteer onderwerpen
+scope.selection.cancel=Annuleer
 
 # ViewTemplate.jsp
 # 0 : Application Name
