--- a/elwikijsp.root/bundles/org.elwiki.resources/templates/default_zh_CN.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/templates/default_zh_CN.properties
@@ -523,6 +523,20 @@ upload.info=\u8981\u5411\u8be5\u9875\u9762\u6dfb\u52a0\u65b0\u9644\u4ef6\uff0c\u
 upload.submit=\u4e0a\u4f20
 upload.done=\u4e0a\u4f20\u5b8c\u6210\uff0c\u60a8\u53ef\u80fd\u8981\u8fd4\u56de\u5230 {0}
 
+# ScopeContent.jsp
+scope.cmd=\u8303\u56F4:
+scope.cmd.title=\u9009\u62E9\u663E\u793A\u4E3B\u9898
+scope.save.submit=\u5B9A\u4E49\u533A\u57DF
+scope.cancel.submit=\u53D6\u6D88
+scope.show.topics=\u8981\u663E\u793A\u7684\u4E3B\u9898
+scope.btn.all=\u6240\u6709\u8BDD\u9898
+scope.btn.selected=\u9009\u5B9A\u4E3B\u9898\u96C6
+scope.label.selection=\u9009\u5B9A\u4E3B\u9898\u96C6
+scope.btn.new=\u65B0\u7684...
+scope.btn.edit=\u8C03\u6574...
+scope.btn.remove=\u79FB\u8D70
+scope.selection.ok=\u5B9A\u4E49\u4E00\u7EC4\u4E3B\u9898
+scope.selection.cancel=\u53D6\u6D88
 
 # ViewTemplate.jsp
 # 0 : Application Name
