add: addition lines of java properties files.

--- a/elwikijsp.root/bundles/org.elwiki.resources/templates/default_pt_BR.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/templates/default_pt_BR.properties
@@ -449,19 +449,19 @@ notification.createUserProfile.accept.subject=Bem-vindo ao {0}\!
 notification.createUserProfile.accept.content=Parabéns\! Seu novo perfil em {0} foi criado. Seguem os detalhes\: \n\nLogin:\: {1} \nNome \: {2} \nE-Mail:    \: {3} \n\nSe você esquecer sua senha você pode resetá-la em {4}.
 
 # ScopeContent.jsp
-scope.cmd=Scope:
-scope.cmd.title=Select display topics
-scope.save.submit=Set Scope
-scope.cancel.submit=Cancel
-scope.show.topics=Displayed topics
-scope.btn.all=All topics
-scope.btn.selected=Selected topics
-scope.label.selection=Selected topics
-scope.btn.new=New...
-scope.btn.edit=Edit...
-scope.btn.remove=Remove
-scope.selection.ok=Select topics
-scope.selection.cancel=Cancel
+scope.cmd=Ambito:
+scope.cmd.title=Selecionar tópicos de exibição
+scope.save.submit=Definir Âmbito
+scope.cancel.submit=Cancelar
+scope.show.topics=Tópicos exibidos
+scope.btn.all=Todos os tópicos
+scope.btn.selected=Tópicos selecionados
+scope.label.selection=Tópicos selecionados
+scope.btn.new=Novo...
+scope.btn.edit=Editar...
+scope.btn.remove=Remover
+scope.selection.ok=Selecione tópicos
+scope.selection.cancel=Cancelar
 
 # ------------------------------------------------------------------------
 # There are a lot of keys still missing here, please add your translations below.
