fixing resources of workflow support

--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_fi.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_fi.properties
@@ -582,6 +582,7 @@ wf.select.one                            = (valitse yksi)
 workflow.actions            = Toiminnot
 workflow.actor              = T\u00E4m\u00E4nhetkinen tekij\u00E4
 workflow.actor.instructions = Sinun t\u00E4ytyy reagoida seuraaviin teht\u00E4viin:
+workflow.beforelogin        = Sinun t\u00E4ytyy rekister\u00F6ity\u00E4 ennen kuin voit k\u00E4ytt\u00E4\u00E4 ty\u00F6nkulkujasi
 workflow.decisions.heading  = Tulevat
 workflow.details            = lis\u00E4\u00E4...
 workflow.details.title      = N\u00E4yt\u00E4/piilota lis\u00E4tiedot
