--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_it.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_it.properties
@@ -592,6 +592,7 @@ wf.select.one                                    = (selezionane uno)
 workflow.actions            = Azioni
 workflow.actor              = Soggetto
 workflow.actor.instructions = Devi operare sui seguenti workflows:
+workflow.beforelogin        = \u00C8 necessario accedere prima di poter accedere ai flussi di lavoro
 workflow.decisions.heading  = Inbox
 workflow.details            = dettagli ...
 workflow.details.title      = Mostra o nascondi i dettagli
