--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_zh_CN.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_zh_CN.properties
@@ -583,6 +583,7 @@ wf.select.one                                    = \uFF08\u9009\u62E9\u4E00\u987
 workflow.actions            = \u64CD\u4F5C
 workflow.actor              = \u5F53\u524D\u64CD\u4F5C\u8005
 workflow.actor.instructions = \u60A8\u9700\u8981\u5BF9\u4EE5\u4E0B\u5DE5\u4F5C\u6D41\u8FDB\u884C\u64CD\u4F5C\uFF1A
+workflow.beforelogin        = \u60A8\u9700\u8981\u5728\u8A2A\u554F\u5DE5\u4F5C\u6D41\u7A0B\u4E4B\u524D\u5411Wiki\u8A3B\u518A
 workflow.decisions.heading  = \u6536\u4EF6\u7BB1
 workflow.details            = \u8BE6\u7EC6\u4FE1\u606F...
 workflow.details.title      = \u663E\u793A\u6216\u9690\u85CF\u8BE6\u7EC6\u4FE1\u606F
