--- a/elwikijsp.root/bundles/org.elwiki.main/src/shapes/default_fr.properties
+++ b/elwikijsp.root/bundles/org.elwiki.main/src/shapes/default_fr.properties
@@ -439,7 +439,7 @@ login.lostpw.tab             = Mot de passe perdu
 login.lostpw.title           = Vous avez perdu votre mot de passe\u00A0?
 login.nopassword             = Vous n'avez pas de compte\u00A0?
 login.password               = Mot de passe
-login.register.tab           = Inscrire un nouvel utilisateur
+login.register.tab           = Enregistrement d'un nouvel utilisateur
 login.registernow            = Inscrivez-vous \u00E0 {0} maintenant\u00A0!
 login.registernow.title      = Inscrire un nouvel utilisateur\u00A0!
 login.remember               = Se souvenir de moi
