--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_pt_BR.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_pt_BR.properties
@@ -54,6 +54,7 @@ actions.rawpage             = Ver fonte da p\u00E1gina
 actions.rawpage.title       = Ver fonte da p\u00E1gina
 actions.recentchanges       = Altera\u00E7\u00F5es recentes
 actions.recentchanges.title = P\u00E1ginas ordenadas por data de altera\u00E7\u00E3o
+actions.registernow         = Cadastre novo usu\u00E1rio!
 actions.separator           = - - - - - -
 actions.systeminfo          = JSPWiki Sistema de Informa\u00E7\u00F5es
 actions.systeminfo.title    = Mostrar op\u00E7\u00F5es do sistema JSPWiki de &amp; informa\u00E7\u00F5es
@@ -306,7 +307,7 @@ login.lostpw.tab             = Perdeu a senha
 login.lostpw.title           = Perdeu sua senha?
 login.nopassword             = N\u00E3o tem uma conta ?
 login.password               = Senha
-login.register.tab           = Registar novo usu\u00E1rio
+login.register.tab           = Registo de novo utilizador
 login.registernow            = Junte-se {0} agora!
 login.registernow.title      = Registrar novo usu\u00E1rio!
 login.remember               = Lembrar?
