--- a/elwikijsp.root/bundles/org.elwiki.main/src/shapes/default_it.properties
+++ b/elwikijsp.root/bundles/org.elwiki.main/src/shapes/default_it.properties
@@ -56,6 +56,7 @@ actions.rawpage             = Mostra il sorgente della pagina
 actions.rawpage.title       = Mostra il sorgente della pagina
 actions.recentchanges       = Ultime modifiche
 actions.recentchanges.title = Pagine ordinate per data di modifica
+actions.registernow         = Registra nuovo utente!
 actions.separator           = - - - - - -
 actions.systeminfo          = JSPWiki System Info
 actions.systeminfo.title    = Mostra la configurazione di sistema di questo JSPWiki
@@ -592,6 +593,7 @@ wf.select.one                                    = (selezionane uno)
 workflow.actions            = Azioni
 workflow.actor              = Soggetto
 workflow.actor.instructions = Devi operare sui seguenti workflows:
+workflow.beforelogin        = \u00C8 necessario accedere prima di poter accedere ai flussi di lavoro
 workflow.decisions.heading  = Inbox
 workflow.details            = dettagli ...
 workflow.details.title      = Mostra o nascondi i dettagli
