--- a/elwikijsp.root/bundles/org.elwiki.main/src/shapes/default_pt_BR.properties
+++ b/elwikijsp.root/bundles/org.elwiki.main/src/shapes/default_pt_BR.properties
@@ -54,6 +54,7 @@ actions.rawpage             = Ver fonte da p\u00E1gina
 actions.rawpage.title       = Ver fonte da p\u00E1gina
 actions.recentchanges       = Altera\u00E7\u00F5es recentes
 actions.recentchanges.title = P\u00E1ginas ordenadas por data de altera\u00E7\u00E3o
+actions.registernow         = Cadastre novo usu\u00E1rio!
 actions.separator           = - - - - - -
 actions.systeminfo          = JSPWiki Sistema de Informa\u00E7\u00F5es
 actions.systeminfo.title    = Mostrar op\u00E7\u00F5es do sistema JSPWiki de &amp; informa\u00E7\u00F5es
@@ -306,7 +307,7 @@ login.lostpw.tab             = Perdeu a senha
 login.lostpw.title           = Perdeu sua senha?
 login.nopassword             = N\u00E3o tem uma conta ?
 login.password               = Senha
-login.register.tab           = Registar novo usu\u00E1rio
+login.register.tab           = Registo de novo utilizador
 login.registernow            = Junte-se {0} agora!
 login.registernow.title      = Registrar novo usu\u00E1rio!
 login.remember               = Lembrar?
@@ -409,3 +410,25 @@ view.tab                 = Vis\u00E3o
 #
 wf.notification.createUserProfile.accept.content = Parab\u00E9ns! Seu novo perfil em {0} foi criado. Seguem os detalhes: \n\nLogin:: {1} \nNome : {2} \nE-Mail:    : {3} \n\nSe voc\u00EA esquecer sua senha voc\u00EA pode reset\u00E1-la em {4}.
 wf.notification.createUserProfile.accept.subject = Bem-vindo ao {0}!
+
+#
+# Workflow generic messages
+#
+workflow.actions            = A\u00E7\u00F5es
+workflow.actor              = Editor atual
+workflow.actor.instructions = Voc\u00EA deve participar dos seguintes ramos
+workflow.beforelogin        = Voc\u00EA deve se registrar antes de poder acessar seus fluxos de trabalho
+workflow.decisions.heading  = Entrantos
+workflow.details            = particulares...
+workflow.details.title      = Mostrar / esconder detalhes
+workflow.heading            = Elementos do seu fluxo de trabalho
+workflow.instructions       = Esta p\u00E1gina cont\u00E9m informa\u00E7\u00F5es sobre os fluxos de trabalho que voc\u00EA iniciou ou os problemas que foram direcionados a voc\u00EA.
+workflow.item               = Elemento
+workflow.noinstructions     = Voc\u00EA n\u00E3o tem nenhum elemento de fluxo de trabalho.
+workflow.owner.instructions = Voc\u00EA iniciou os seguintes fluxos de trabalho:
+workflow.requester          = Solicitante
+workflow.saveWikiPage       = Salvar p\u00E1gina wiki <strong>{2}</strong>
+workflow.startTime          = Recebido
+workflow.submit             = Fa\u00E7a isso
+workflow.tab                = Workflow
+workflow.workflows.heading  = Sa\u00EDda
