--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_es.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_es.properties
@@ -59,7 +59,7 @@ actions.rawpage             = Ver c\u00F3digo fuente de la p\u00E1gina
 actions.rawpage.title       = Ver c\u00F3digo fuente de la p\u00E1gina
 actions.recentchanges       = Cambios Recientes
 actions.recentchanges.title = P\u00E1ginas ordenadas por fecha de modificaci\u00F3n
-actions.registernow         = &#161;Registra un nuevo usuario!
+actions.registernow         = Registrar un nuevo usuario!
 actions.separator           = - - - - - -
 actions.showreaderview      = Ver vista lector
 actions.systeminfo          = JSPWiki - Info de Sistema
@@ -452,7 +452,7 @@ login.nopassword             = &#191;No tienes una contrase\u00F1a?
 login.password               = Contrase\u00F1a
 login.register.tab           = Registro Nuevo Usuario
 login.registernow            = &#161;\u00DAnete a {0} ahora!
-login.registernow.title      = &#161;Registra un nuevo usuario!
+login.registernow.title      = Registrar un nuevo usuario!
 login.remember               = &#191;Recordarme?
 login.submit.login           = Iniciar sesi\u00F3n
 login.tab                    = Id. de acceso
