--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_it.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_it.properties
@@ -56,6 +56,7 @@ actions.rawpage             = Mostra il sorgente della pagina
 actions.rawpage.title       = Mostra il sorgente della pagina
 actions.recentchanges       = Ultime modifiche
 actions.recentchanges.title = Pagine ordinate per data di modifica
+actions.registernow         = Registra nuovo utente!
 actions.separator           = - - - - - -
 actions.systeminfo          = JSPWiki System Info
 actions.systeminfo.title    = Mostra la configurazione di sistema di questo JSPWiki
