--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_zh_CN.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_zh_CN.properties
@@ -57,6 +57,7 @@ actions.rawpage             = \u67E5\u770B\u9875\u9762\u6E90\u4EE3\u7801
 actions.rawpage.title       = \u67E5\u770B\u9875\u9762\u6E90\u4EE3\u7801
 actions.recentchanges       = \u6700\u65B0\u66F4\u6539
 actions.recentchanges.title = \u6309\u4FEE\u6539\u65E5\u671F\u6392\u5E8F\u7684\u9875\u9762
+actions.registernow         = \u8A3B\u518A\u4E00\u500B\u65B0\u7528\u6236\uFF01
 actions.separator           = - - - - - -
 actions.systeminfo          = JSPWiki \u7CFB\u7EDF\u4FE1\u606F
 actions.systeminfo.title    = \u663E\u793A JSPWiki \u7CFB\u7EDF\u8BBE\u7F6E\u4FE1\u606F
@@ -404,7 +405,7 @@ login.lostpw.tab             = \u5FD8\u8BB0\u5BC6\u7801
 login.lostpw.title           = \u5FD8\u8BB0\u5BC6\u7801\uFF1F
 login.nopassword             = \u6CA1\u6709\u5E10\u6237\u5417\uFF1F
 login.password               = \u5BC6\u7801
-login.register.tab           = \u6CE8\u518C\u65B0\u7528\u6237
+login.register.tab           = \u65B0\u7528\u6236\u8A3B\u518A
 login.registernow            = \u73B0\u5728\u52A0\u5165 {0}\uFF01
 login.registernow.title      = \u6CE8\u518C\u65B0\u7528\u6237\uFF01
 login.remember               = \u662F\u5426\u8BB0\u4F4F\u6211\u7684\u4FE1\u606F\uFF1F
