--- a/elwikijsp.root/bundles/org.elwiki.main/src/shapes/default_fi.properties
+++ b/elwikijsp.root/bundles/org.elwiki.main/src/shapes/default_fi.properties
@@ -293,7 +293,7 @@ info.attachment.type              = Tyyppi
 info.author                       = Muokkaaja
 info.backtomainpage               = Takaisin sivulle {0}
 info.backtoparentpage             = Takaisin yl\u00E4sivulle {0}
-info.changenote                   = Muutostieto
+info.changenote                   = Kommentoi muutosta
 info.changes                      = Muutokset...
 info.confirmdelete                = Oletko varma, ett\u00E4 haluat poistaa sivun pysyv\u00E4sti?
 info.createdon                    = T\u00E4m\u00E4 sivun loi {1}, {0}
