--- a/elwikijsp.root/bundles/org.elwiki.main/src/shapes/default_zh_CN.properties
+++ b/elwikijsp.root/bundles/org.elwiki.main/src/shapes/default_zh_CN.properties
@@ -293,7 +293,7 @@ info.attachment.type              = \u7C7B\u578B
 info.author                       = \u4F5C\u8005
 info.backtomainpage               = \u8FD4\u56DE {0}
 info.backtoparentpage             = \u8FD4\u56DE {0}\uFF08\u7236\u9875\u9762\uFF09
-info.changenote                   = \u53D8\u66F4\u6CE8\u91CA
+info.changenote                   = \u6709\u5173\u66F4\u6539\u7684\u8BC4\u8BBA
 info.changes                      = \u53D8\u66F4...
 info.confirmdelete                = \u8BF7\u786E\u8BA4\u662F\u5426\u8981\u6C38\u4E45\u5220\u9664\u6B64\u5185\u5BB9\uFF01
 info.createdon                    = \u8BE5\u9875\u9762\u7531 {1} \u521B\u5EFA\u4E8E {0}
