refactoring of wiki plugin support.

--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_de.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_de.properties
@@ -131,6 +131,7 @@ install.jsp.validated.new.props                 = Hier ist deine neue jspwiki.pr
 #
 #  The Javascript stuff
 #
+javascript.broken.image                = Inhalt nicht verf\u00FCgbar! (defekter Link)
 javascript.category.title              = Klicken, um Kategorie [{0}] anzuzeigen...
 javascript.collapse                    = Zuklappen
 javascript.edit.allsections            = (Alle)
