--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_fi.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_fi.properties
@@ -119,6 +119,7 @@ install.jsp.validated.new.props                 = T\u00E4ss\u00E4 uusi jspwiki.p
 #
 # The Javascript stuff
 #
+javascript.broken.image                = Sis\u00E4lt\u00F6 ei saatavilla! (rikki linkki)
 javascript.category.title              = Valitse kategoria [{0}] ...
 javascript.collapse                    = Klikkaa pienent\u00E4\u00E4ksesi
 javascript.edit.allsections            = ( Kaikki )
