--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_fr.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_fr.properties
@@ -127,6 +127,7 @@ install.jsp.validated.new.props                 = Voici votre nouveau jspwiki.pr
 #
 # The Javascript stuff
 #
+javascript.broken.image                = Contenu indisponible ! (lien bris\u00E9)
 javascript.category.title              = Cliquez pour voir la cat\u00E9gorie [{0}]...
 javascript.collapse                    = Cliquer pour r\u00E9duire
 javascript.edit.allsections            = (Toutes)
