--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_it.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_it.properties
@@ -125,6 +125,7 @@ install.jsp.validated.new.props                 = Ecco il vostro nuovo file  jsp
 #
 # The Javascript stuff
 #
+javascript.broken.image                = Contenuto non disponibile! (collegamento interrotto)
 javascript.category.title              = Click per mostrare la categoria [{0}] ...
 javascript.collapse                    = Click per chiudere
 javascript.edit.allsections            = ( Tutte )
