--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_nl.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_nl.properties
@@ -122,6 +122,7 @@ install.jsp.validated.new.props                 = Hier is je hagelnieuwe jspwiki
 #
 # The Javascript stuff
 #
+javascript.broken.image                = Inhoud niet beschikbaar! (gebroken link)
 javascript.category.title              = Toon de category [{0}] ...
 javascript.collapse                    = Klik om de inhoud dicht te klappen
 javascript.edit.allsections            = ( Allemaal )
