--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_pt_BR.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_pt_BR.properties
@@ -123,6 +123,7 @@ install.jsp.validated.new.props                 = Aqui est\u00E1 o seu novo arqu
 #
 # The Javascript stuff
 #
+javascript.broken.image   = Conte\u00FAdo indispon\u00EDvel! (link quebrado)
 javascript.category.title = Click per mostrare la categoria [{0}] ...
 
 #
