--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_ru.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_ru.properties
@@ -123,6 +123,7 @@ install.jsp.validated.new.props                 = \u0412\u043E\u0442 \u0412\u043
 #
 # The Javascript stuff
 #
+javascript.broken.image                = \u041A\u043E\u043D\u0442\u0435\u043D\u0442 \u043D\u0435\u0434\u043E\u0441\u0442\u0443\u043F\u0435\u043D! (\u043D\u0435\u0440\u0430\u0431\u043E\u0442\u0430\u044E\u0449\u0430\u044F \u0441\u0441\u044B\u043B\u043A\u0430)
 javascript.category.title              = \u041A\u043B\u0438\u043A\u043D\u0438\u0442\u0435 \u0434\u043B\u044F \u043E\u0442\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u0438\u044F \u043A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u0438 [{0}] ...
 javascript.collapse                    = \u0421\u0432\u0435\u0440\u043D\u0443\u0442\u044C
 javascript.edit.allsections            = ( \u0412\u0441\u0435 )
