--- a/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_zh_CN.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/OSGI-INF/l10n/bundle_zh_CN.properties
@@ -128,6 +128,7 @@ install.jsp.validated.new.props                 = \u4E0B\u9762\u662F\u60A8\u7684
 #
 # The Javascript stuff
 #
+javascript.broken.image                = \u5167\u5BB9\u4E0D\u53EF\u7528\uFF01 \uFF08\u65B7\u958B\u7684\u93C8\u63A5\uFF09
 javascript.category.title              = \u5355\u51FB\u663E\u793A\u7C7B\u522B [{0}] ...
 javascript.collapse                    = \u5355\u51FB\u6298\u53E0
 javascript.edit.allsections            = \uFF08\u5168\u90E8\uFF09
