implemented support for selecting the page content version.

--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_de.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_de.properties
@@ -55,6 +55,7 @@ actions.registernow         = Neuen Benutzer registrieren!
 actions.separator           = - - - - - -
 actions.systeminfo          = JSPWiki System Info
 actions.systeminfo.title    = Zeige JSPWiki Systemeinstellungen & Info
+actions.trail               = Trail
 actions.upload              = Datei anh\u00E4ngen
 actions.view                = Anzeigen
 actions.view.title          = Aktuelle Seite anzeigen [ v ]
@@ -539,10 +540,10 @@ userbox.button = Benutzermen\u009F
 #
 # PageContent.jsp
 #
-view.backtocurrent       = [Zur\u00FCck zur aktuellen Version]
+view.backtolatest        = Zur\u00FCck zur neuesten version
 view.heading.attachments = Anh\u00E4nge
-view.oldversion          = Dies ist Version {0}. Es handelt sich nicht um die aktuelle Version und kann folglich auch nicht ge\u00E4ndert werden.
-view.restore             = [Diese Version wiederherstellen]
+view.oldversion          = Dies ist die version von {0}. Dies ist nicht die neueste version, daher kann sie nicht bearbeitet werden.
+view.restore             = Diese Version wiederherstellen
 #
 # PageTab.jsp
 #
