--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_es.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_es.properties
@@ -16,7 +16,7 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
-actions.confirmlogout       = &#161;Por favor, confirma que quieres cerrar sesi\u00F3n!
+actions.confirmlogout       = Por favor, confirme que desea cerrar la sesi\u00F3n.
 actions.creategroup         = Crear grupo
 actions.creategroup.title   = Crear nuevo grupo de autorizaci\u00F3n
 actions.deletegroup         = Borrar grupo
@@ -554,9 +554,9 @@ userbox.button = Men\u00FA del Usuario
 #
 # PageContent.jsp
 #
-view.backtocurrent       = Volver a la versi\u00F3n actual
+view.backtolatest        = Volver a la \u00DAltima versi\u00F3n
 view.heading.attachments = Adjuntos
-view.oldversion          = \u00C9sta es la versi\u00F3n n\u00FAmero {0}. No es la versi\u00F3n actual, por lo que no puede ser editada.
+view.oldversion          = \u00C9sta es la versi\u00F3n {0}. No es la versi\u00F3n actual, por lo que no puede ser editada.
 view.restore             = Restaurar esta versi\u00F3n
 #
 # PageTab.jsp
