--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_fi.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_fi.properties
@@ -16,6 +16,7 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
+actions.confirmlogout       = Vahvista, ett\u00E4 haluat kirjautua ulos!
 actions.creategroup         = Luo uusi ryhm\u00E4
 actions.creategroup.title   = Luo uusi ryhm\u00E4
 actions.deletegroup         = Poista ryhm\u00E4
@@ -24,6 +25,7 @@ actions.editparent          = Muokkaa
 actions.editparent.title    = Muokkaa yl\u00E4sivua [ e ]
 actions.gotobottom          = Sivun loppuun
 actions.gototop             = Sivun alkuun
+actions.groups              = Konserni
 actions.home                = Etusivu
 actions.home.title          = Mene etusivulle &quot;{0}&quot;
 actions.index               = Sis\u00E4llysluettelo
@@ -53,6 +55,7 @@ actions.registernow         = Rekister\u00F6idy uusi k\u00E4ytt\u00E4j\u00E4!
 actions.separator           = - - - - - -
 actions.systeminfo          = J\u00E4rjestelm\u00E4n tiedot
 actions.systeminfo.title    = N\u00E4yt\u00E4 j\u00E4rjestelm\u00E4n tiedot
+actions.trail               = Polku
 actions.upload              = Liit\u00E4 tiedosto
 actions.view                = N\u00E4yt\u00E4
 actions.view.title          = N\u00E4yt\u00E4 sivu [ v ]
@@ -509,10 +512,10 @@ upload.title          = {0}: Liitetiedoston lis\u00E4ys
 #
 # PageContent.jsp
 #
-view.backtocurrent       = [Takaisin tuoreimpaan]
+view.backtolatest        = Palaa uusimpaan versioon
 view.heading.attachments = Liitteet
 view.oldversion          = T\u00E4m\u00E4 on versio {0}. Se ei ole tuorein, joten sit\u00E4 ei voi muokata.
-view.restore             = [Palauta t\u00E4m\u00E4]
+view.restore             = Palauta t\u00E4m\u00E4 versio
 #
 # PageTab.jsp
 #
@@ -527,17 +530,19 @@ view.title.view          = {0}: {1}
 #
 # Specific workflow/decision messages
 #
-wf.decision.createUserProfile            = Uusi k\u00E4ytt\u00E4j\u00E4tili <strong>{2}</strong>
-wf.decision.saveWikiPage                 = Hyv\u00E4ksy sivu <strong>{2}</strong>
-wf.fact.currentText                      = Vanha
-wf.fact.diffText                         = Ero uuden ja vanhan v\u00E4lill\u00E4
-wf.fact.isAuthenticated                  = Kirjautunut?
-wf.fact.pageName                         = Sivun nimi
-wf.fact.proposedText                     = Uusi
-wf.fact.submitter                        = L\u00E4hett\u00E4j\u00E4
-wf.notification.createUserProfile.reject = Pyynt\u00F6si luoda uusi k\u00E4ytt\u00E4j\u00E4tili on hyl\u00E4tty.
-wf.notification.saveWikiPage.reject      = Pyynt\u00F6si tallentaa sivu <strong>{2}</strong> on hyl\u00E4tty.
-wf.select.one                            = (valitse yksi)
+wf.decision.createUserProfile                    = Uusi k\u00E4ytt\u00E4j\u00E4tili <strong>{2}</strong>
+wf.decision.saveWikiPage                         = Hyv\u00E4ksy sivu <strong>{2}</strong>
+wf.fact.currentText                              = Vanha
+wf.fact.diffText                                 = Ero uuden ja vanhan v\u00E4lill\u00E4
+wf.fact.isAuthenticated                          = Kirjautunut?
+wf.fact.pageName                                 = Sivun nimi
+wf.fact.proposedText                             = Uusi
+wf.fact.submitter                                = L\u00E4hett\u00E4j\u00E4
+wf.notification.createUserProfile.accept.content = Onnitteluni! Uusi profiilisi {0} on luotu. Profiilisi tiedot ovat seuraavat:\n\nK\u00E4ytt\u00E4j\u00E4tunnus: {1}\nNimesi: {2}\nS\u00E4hk\u00F6posti: {3}\n\nJos unohdat salasanasi, voit nollata sen kohdassa {4}
+wf.notification.createUserProfile.accept.subject = Tervetuloa {0}
+wf.notification.createUserProfile.reject         = Pyynt\u00F6si luoda uusi k\u00E4ytt\u00E4j\u00E4tili on hyl\u00E4tty.
+wf.notification.saveWikiPage.reject              = Pyynt\u00F6si tallentaa sivu <strong>{2}</strong> on hyl\u00E4tty.
+wf.select.one                                    = (valitse yksi)
 
 #
 # Workflow generic messages
