--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_fr.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_fr.properties
@@ -551,9 +551,9 @@ userbox.button = Menu de l'utilisateur
 #
 # PageContent.jsp
 #
-view.backtocurrent       = Retourner \u00E0 la version courante
+view.backtolatest        = Retour \u00E0 la derni\u00E8re version
 view.heading.attachments = Attachements
-view.oldversion          = Ceci est la version {0}. Ce n''est pas la version courante, vous ne pouvez donc pas l''\u00E9diter.
+view.oldversion          = C'est la version {0}. Ce n'est pas la version actuelle, donc vous ne pouvez pas la modifier.
 view.restore             = Restaurer cette version
 #
 # PageTab.jsp
