--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_it.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_it.properties
@@ -16,6 +16,7 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
+actions.confirmlogout       = Si prega di confermare che si desidera effettuare il logout!
 actions.creategroup         = Crea il gruppo
 actions.creategroup.title   = Crea un nuovo gruppo autorizzativo
 actions.deletegroup         = Elimina il gruppo
@@ -24,6 +25,7 @@ actions.editparent          = <span class='accesskey'>M</span>odifica la pagina 
 actions.editparent.title    = Modifica la pagina principale [ m ]
 actions.gotobottom          = Vai alla fine
 actions.gototop             = Vai all&#8217;inizio
+actions.groups              = Gruppo
 actions.home                = Home
 actions.home.title          = Vai alla home page {0}
 actions.index               = Indice alfabetico
@@ -53,6 +55,7 @@ actions.registernow         = Registra nuovo utente!
 actions.separator           = - - - - - -
 actions.systeminfo          = JSPWiki System Info
 actions.systeminfo.title    = Mostra la configurazione di sistema di questo JSPWiki
+actions.trail               = Sentiero
 actions.upload              = Allegati
 actions.view                = Vedi
 actions.view.title          = Vedi la pagina corrente [ v ]
@@ -515,10 +518,10 @@ userbox.button = User Menu
 #
 # PageContent.jsp
 #
-view.backtocurrent       = [Vai alla versione corrente]
+view.backtolatest        = Torna all'ultima versione
 view.heading.attachments = Allegati
-view.oldversion          = Questa &egrave; la versione {0}. Non &egrave; la versione corrente, quindi non pu&ograve; essere modificata.
-view.restore             = [Ripristina questa versione]
+view.oldversion          = Questa versione \u00E8 {0}. Questa non \u00E8 la versione corrente, quindi non pu\u00F2 essere modificata.
+view.restore             = Ripristina questa versione
 #
 # PageTab.jsp
 #
@@ -542,7 +545,7 @@ wf.fact.pageName                                 = Nome della pagina
 wf.fact.proposedText                             = Proposta
 wf.fact.submitter                                = Submitter
 wf.notification.createUserProfile.accept.content = Congratulazioni! Il tuo nuovo profilo su {0} \u00C3\u00A8 stato creato. I dettagli del profilo sono: \n\nNome utente : {1} \nIl tuo nome: {2} \nE-mail      : {3} \n\nSe hai dimenticato la password la puoi resettare qui: {4}.
-wf.notification.createUserProfile.accept.subject = Benvenuto in {0}!
+wf.notification.createUserProfile.accept.subject = Benvenuto in {0}
 wf.notification.createUserProfile.reject         = La tua richiesta di creazione di profilo utente &egrave; stata rigettata.
 wf.notification.saveWikiPage.reject              = La tua richiesta di salvare la pagina <strong>{2}</strong> &egrave; stata rigettata.
 wf.select.one                                    = (selezionane uno)
