--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_nl.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_nl.properties
@@ -551,10 +551,10 @@ userbox.button = Gebruikersmenu
 #
 # PageContent.jsp
 #
-view.backtocurrent       = [Terug naar de laatste versie]
+view.backtolatest        = Terug naar de laatste versie
 view.heading.attachments = Bijlagen
 view.oldversion          = Dit is versie {0}. Dit is niet de laatste versie, en kan daarom ook niet worden bewerkt.
-view.restore             = [Herstel deze versie]
+view.restore             = Deze versie herstellen
 #
 # PageTab.jsp
 #
