--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_pt_BR.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_pt_BR.properties
@@ -16,6 +16,7 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
+actions.confirmlogout       = Por favor, confirme que voc\u00EA deseja sair!
 actions.creategroup         = Criar grupo
 actions.creategroup.title   = Criar novo grupo de autoriza\u00E7\u00E3o
 actions.deletegroup         = Deletar grupo
@@ -24,6 +25,7 @@ actions.editparent          = <span class='accesskey'>E</span>ditar p\u00E1gina 
 actions.editparent.title    = Editar p\u00E1gina "m\u00E3e" [ e ]
 actions.gotobottom          = Ir para baixo
 actions.gototop             = Ir para topo
+actions.groups              = Grupos
 actions.home                = Home
 actions.home.title          = Ir para p\u00E1gina incial {0}
 actions.index               = \u00CDndice alfab\u00E9tico
@@ -53,6 +55,7 @@ actions.registernow         = Cadastre novo usu\u00E1rio!
 actions.separator           = - - - - - -
 actions.systeminfo          = JSPWiki Sistema de Informa\u00E7\u00F5es
 actions.systeminfo.title    = Mostrar op\u00E7\u00F5es do sistema JSPWiki de &amp; informa\u00E7\u00F5es
+actions.trail               = Hist\u00F3ria
 actions.upload              = Anexar Arquivo
 actions.view                = Ver
 actions.view.title          = Ver p\u00E1gina atual [ v ]
@@ -392,32 +395,45 @@ scope.show.topics      = Displayed topics
 #
 # PageContent.jsp
 #
-view.backtocurrent       = [Voltar \u00E0 vers\u00E3o atual]
+view.backtolatest        = Voltar para a \u00FAltima vers\u00E3o
 view.heading.attachments = Anexos
 view.oldversion          = Essa \u00E9 a vers\u00E3o {0}. N\u00E3o \u00E9 a vers\u00E3o atual, portanto n\u00E3o pode ser editada.
-view.restore             = [Restaurar essa vers\u00E3o]
+view.restore             = Restaurar essa vers\u00E3o
 #
 # PageTab.jsp
 #
 view.tab                 = Vis\u00E3o
+view.title.view          = {0}: {1}
 
+wf.decision.createUserProfile                    = Novo perfil de usu\u00E1rio <strong>{2}</strong>
+wf.decision.saveWikiPage                         = Aprovar p\u00E1gina <strong>{2}</strong>
+wf.fact.currentText                              = Atual
+wf.fact.diffText                                 = A diferen\u00E7a entre a vers\u00E3o proposta e a atual
+wf.fact.isAuthenticated                          = Est\u00E1 Autenticado?
+wf.fact.pageName                                 = Nome da p\u00E1gina
+wf.fact.proposedText                             = Proposta
+wf.fact.submitter                                = Remetente
 #
 # Specific workflow/decision messages
 #
 wf.notification.createUserProfile.accept.content = Parab\u00E9ns! Seu novo perfil em {0} foi criado. Seguem os detalhes: \n\nLogin:: {1} \nNome : {2} \nE-Mail:    : {3} \n\nSe voc\u00EA esquecer sua senha voc\u00EA pode reset\u00E1-la em {4}.
-wf.notification.createUserProfile.accept.subject = Bem-vindo ao {0}!
+wf.notification.createUserProfile.accept.subject = Bem-vindo ao {0}
+wf.notification.createUserProfile.reject         = Sua solicita\u00E7\u00E3o para criar um perfil de usu\u00E1rio foi rejeitada.
+wf.notification.saveWikiPage.reject              = Sua solicita\u00E7\u00E3o para salvar a p\u00E1gina <strong>{2}</strong> foi rejeitada.
+wf.select.one                                    = (selecione um)
 
 #
 # Workflow generic messages
 #
 workflow.actions            = A\u00E7\u00F5es
 workflow.actor              = Editor atual
-workflow.actor.instructions = Voc\u00EA deve participar dos seguintes ramos
+workflow.actor.instructions = Voc\u00EA deve participar dos seguintes ramos:
 workflow.beforelogin        = Voc\u00EA deve se registrar antes de poder acessar seus fluxos de trabalho
 workflow.decisions.heading  = Entrantos
 workflow.details            = particulares...
 workflow.details.title      = Mostrar / esconder detalhes
 workflow.heading            = Elementos do seu fluxo de trabalho
+workflow.id                 = ID
 workflow.instructions       = Esta p\u00E1gina cont\u00E9m informa\u00E7\u00F5es sobre os fluxos de trabalho que voc\u00EA iniciou ou os problemas que foram direcionados a voc\u00EA.
 workflow.item               = Elemento
 workflow.noinstructions     = Voc\u00EA n\u00E3o tem nenhum elemento de fluxo de trabalho.
