--- a/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_zh_CN.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/shapes/default_zh_CN.properties
@@ -16,6 +16,7 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
+actions.confirmlogout       = \u8BF7\u786E\u8BA4\u60A8\u8981\u6CE8\u9500!
 actions.creategroup         = \u521B\u5EFA\u7EC4
 actions.creategroup.title   = \u521B\u5EFA\u65B0\u6388\u6743\u7EC4
 actions.deletegroup         = \u5220\u9664\u7EC4
@@ -24,6 +25,7 @@ actions.editparent          = \u7F16\u8F91\u7236\u9875\u9762(<span class='access
 actions.editparent.title    = \u7F16\u8F91\u7236\u9875\u9762 [ e ]
 actions.gotobottom          = \u8F6C\u5230\u5E95\u90E8
 actions.gototop             = \u8F6C\u5230\u9876\u90E8
+actions.groups              = \u7EC4\u522B
 actions.home                = \u4E3B\u9875
 actions.home.title          = \u8F6C\u5230\u4E3B\u9875 {0}
 actions.index               = \u5B57\u6BCD\u7D22\u5F15
@@ -53,6 +55,7 @@ actions.registernow         = \u8A3B\u518A\u4E00\u500B\u65B0\u7528\u6236\uFF01
 actions.separator           = - - - - - -
 actions.systeminfo          = JSPWiki \u7CFB\u7EDF\u4FE1\u606F
 actions.systeminfo.title    = \u663E\u793A JSPWiki \u7CFB\u7EDF\u8BBE\u7F6E\u4FE1\u606F
+actions.trail               = \u5386\u53F2
 actions.upload              = \u9644\u52A0\u6587\u4EF6
 actions.view                = \u67E5\u770B
 actions.view.title          = \u67E5\u770B\u5F53\u524D\u9875\u9762 [ v ]
@@ -505,10 +508,10 @@ upload.title          = {0}\uFF1A\u6DFB\u52A0\u9644\u4EF6
 #
 # PageContent.jsp
 #
-view.backtocurrent       = [\u8FD4\u56DE\u5F53\u524D\u7248\u672C]
+view.backtolatest        = \u8FD4\u56DE\u6700\u65B0\u7248\u672C
 view.heading.attachments = \u9644\u4EF6
 view.oldversion          = \u8FD9\u662F\u7248\u672C {0}\u3002\u5B83\u4E0D\u662F\u5F53\u524D\u7684\u7248\u672C\uFF0C\u56E0\u6B64\u4E0D\u80FD\u7F16\u8F91\u3002
-view.restore             = [\u6062\u590D\u6B64\u7248\u672C]
+view.restore             = \u8FD8\u539F\u6B64\u7248\u672C
 #
 # PageTab.jsp
 #
@@ -532,7 +535,7 @@ wf.fact.pageName                                 = \u9875\u9762\u540D\u79F0
 wf.fact.proposedText                             = \u63D0\u8BAE\u7684\u7248\u672C
 wf.fact.submitter                                = \u63D0\u4EA4\u8005
 wf.notification.createUserProfile.accept.content = \u606D\u559C\u60A8\uFF01\u4F60\u7684\u5E10\u53F7 {0} \u5DF2\u7ECF\u521B\u9020\u6210\u529F\u4E86\u3002\u4F60\u7684\u4E2A\u4EBA\u8D44\u6599\u5982\u4E0B: \n\n\u5E10\u53F7: {1} \n\u60A8\u7684\u59D3\u540D: {2} \n\u90AE\u7BB1: {3} \n\n\u5982\u679C\u60A8\u5FD8\u4E86\u5BC6\u7801\uFF0C\u60A8\u53EF\u5728\u4EE5\u4E0B\u7F51\u5740\u91CD\u7F6E {4}.
-wf.notification.createUserProfile.accept.subject = \u6B22\u8FCE\u60A8\u6765\u5230 {0}!
+wf.notification.createUserProfile.accept.subject = \u6B22\u8FCE\u60A8\u6765\u5230 {0}
 wf.notification.createUserProfile.reject         = \u62D2\u7EDD\u60A8\u521B\u5EFA\u7528\u6237\u6982\u8981\u4FE1\u606F\u7684\u8BF7\u6C42\u3002
 wf.notification.saveWikiPage.reject              = \u62D2\u7EDD\u60A8\u4FDD\u5B58\u9875\u9762 <strong>{2}</strong> \u7684\u8BF7\u6C42\u3002
 wf.select.one                                    = \uFF08\u9009\u62E9\u4E00\u9879\uFF09
